--- a/NodeJS/learn_express/public/stylesheets/style.css
+++ b/NodeJS/learn_express/public/stylesheets/style.css
@@ -1,7 +1,30 @@
 body {
-  padding: 50px;
+  padding: 20px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 a {
   color: #00b7ff;
+}
+.error {
+  color: #f00;
+  overflow: auto;
+}
+.action {
+  background: #e4e4e4;
+  margin: 10px auto;
+  padding: 10px;
+  box-sizing: border-box;
+  text-transform: uppercase;
+}
+.action a {
+  display: inline-block;
+  margin: 0 5px;
+}
+.action:before {
+  content: 'ACTION';
+  color: #fff;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+}
+table * {
+  border: 1px solid #ccc;
 }
