--- a/NodeJS/learn_express/public/stylesheets/style.styl
+++ b/NodeJS/learn_express/public/stylesheets/style.styl
@@ -1,5 +1,28 @@
 body
-  padding: 50px
+  padding: 20px
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 a
   color: #00B7FF
+
+.error
+  color: red
+  overflow auto
+
+.action
+  background: rgb(228, 228, 228)
+  margin: 10px auto
+  padding: 10px
+  box-sizing: border-box
+  text-transform: uppercase
+  a
+    display: inline-block
+    margin: 0 5px
+  &:before
+    content: 'ACTION'
+    color: #fff
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5)
+
+
+table *
+  border: 1px solid #ccc;
+
